Guacamole/guacamole.yaml

apiVersion: v1
kind: Service
metadata:
    name: guacamole
spec:
    ports:
     - port: 8080
       protocol: TCP
       targetPort: 8080
    selector:
       app: guacamole

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-deployment
spec:
  selector:
    matchLabels:
      app: guacamole
  replicas: 1
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - guacamole
            topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
      - name: regcred
      containers:
      - name: guacamole
        image: tesimatteo/guacamole:lgplext         #Rebuilt  Guacamole image to enable LGPL extension to communicate with Radius server
        imagePullPolicy: Always
        ports:
        - containerPort: 8080        
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
