Guacamole/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgservice
spec:
  clusterIP: None 
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "pgservice" 
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres
        image: postgres:12
        ports:
        - containerPort: 5432
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: iscsivol
          mountPath: /var/lib/postgresql/data
          subPath: guacamoledb
      volumes:
      - name: iscsivol
        iscsi:
          targetPortal: IP ISCSi service
          iqn: iqn.2020-11.iscsinode:pgaccess
          lun: 1
          fsType: ext4
          readOnly: false
          chapAuthDiscovery: false
          chapAuthSession: true
          secretRef:
             name: chap-secret
