Guacamole/guacamole_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
spec:
  rules:
  - host: guacamole.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guacamole
            port:
              number: 8080
